@@ -1,5 +1,6 @@
 Version 3.9.101dev:
 
+* New option video_driver (can be sdl or null).
 * Configure flags --disable-jit and --disable-x86 must no longer be specified
   for ARM builds, they will be automatically disabled.
 * macOS: Only use -pagezero_size for x86_64 (Fixes builds for M1 hardware).
